Added example go docker environment.

--- a/docker/go/Makefile
+++ b/docker/go/Makefile
@@ -1,9 +1,9 @@
 APP_NAME=example-app
 
 build:
-	docker build --rm -t $(APP_NAME) .
+	docker build -t $(APP_NAME) .
 run:
 	docker run -it --rm $(APP_NAME)
-up: build run
+up: build, run
 
 .PHONY: build, run, up
