Just use python image for boto docker.

--- a/docker/boto/Dockerfile
+++ b/docker/boto/Dockerfile
@@ -1,12 +1,8 @@
-FROM alpine
+FROM python:3.8.0-alpine3.10
 
 WORKDIR /app
 COPY . .
 
-RUN apk add --update python py-pip
-RUN apk add --virtual build-dependencies python-dev build-base \
-    && pip install -r requirements.txt \
-    && apk del build-dependencies \
-    && rm -rf /var/cache/apk/*
+RUN pip install -r requirements.txt
 
 CMD ["/app/main.sh"]
