Redis cluster example.

--- a/docker/geoip/GeoIP.conf
+++ b/docker/geoip/GeoIP.conf
@@ -4,10 +4,10 @@
 # https://dev.maxmind.com/geoip/geoipupdate/.
 
 # `AccountID` is from your MaxMind account.
-AccountID 147034
+AccountID 000000
 
 # `LicenseKey` is from your MaxMind account
-LicenseKey hb7dzHXmmln2HXAc
+LicenseKey XXXXXXXXXXXXXXXX
 
 # `EditionIDs` is from your MaxMind account.
 EditionIDs GeoLite2-ASN GeoLite2-City GeoLite2-Country
