--- a/docker/redis/sentinel/sentinel.conf
+++ b/docker/redis/sentinel/sentinel.conf
@@ -1,1 +1,4 @@
+# Documentation: http://download.redis.io/redis-stable/sentinel.conf
+
+# sentinel monitor <master-name> <ip> <redis-port> <quorum>
 sentinel monitor master master 6379 2
