--- a/docker/awscli/Dockerfile
+++ b/docker/awscli/Dockerfile
@@ -1,6 +1,7 @@
 FROM alpine
 
 RUN apk add --no-cache aws-cli \
-        --repository=http://dl-cdn.alpinelinux.org/alpine/edge/community
+        --repository=http://dl-cdn.alpinelinux.org/alpine/edge/community \
+    && aws ec2 describe-instances
 
 CMD ["tail", "-f", "/dev/null"]
