Added vim configuration examples.

--- a/docker/minimal/docker/Makefile
+++ b/docker/minimal/docker/Makefile
@@ -1,9 +1,12 @@
 APP_NAME=example-app
 
+.PHONY: build
 build:
 	docker build --rm -t $(APP_NAME) .
+
+.PHONY: run
 run:
 	docker run -it --rm $(APP_NAME)
-up: build run
 
-.PHONY: build, run, up
+.PHONY: up
+up: build run
