--- a/docker/nginx/Makefile
+++ b/docker/nginx/Makefile
@@ -1,4 +1,6 @@
 build:
 	docker build -t nginx-test .
-run:
-	docker run -it --rm -p 9090:80 nginx-test
+down:
+	docker stop nginx-test
+up:
+	docker run -dit --rm --name nginx-test -p 9090:80 nginx-test
